<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CompassFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/root_layout_padding">

        <com.wenubey.compass.view.CompassView
            android:id="@+id/compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="@{model.hapticFeedback}"
            android:keepScreenOn="true"
            app:azimuth="@{model.azimuth.degrees}"
            app:layout_constraintBottom_toTopOf="@id/location_container"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{model.trueNorth ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/declination_text"
            app:layout_constraintTop_toBottomOf="@id/compass">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{model.locationStatus == LocationStatus.NOT_PRESENT ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_not_present_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_warning"
                    android:drawableTint="?android:attr/textColorHighlight"
                    android:gravity="center"
                    android:text="@string/location_not_present"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorHighlight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/location_reload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_reload"
                    app:icon="@drawable/ic_refresh"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_not_present_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{(model.locationStatus == LocationStatus.LOADING) ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/location_loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/location_loading"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_loading_indicator" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{model.locationStatus == LocationStatus.PERMISSION_DENIED ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_missing_permission_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_warning"
                    android:drawableTint="?android:attr/textColorHighlight"
                    android:gravity="center"
                    android:text="@string/access_location_permission_denied"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorHighlight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/declination_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="?android:attr/textColorHint"
            android:text="@{model.trueNorth == true &amp;&amp; model.locationStatus == LocationStatus.PRESENT ? @string/true_north : @string/magnetic_north}"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textColor="?android:attr/textColorHint"
            app:drawableStartCompat="@drawable/ic_compass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="com.wenubey.compass.model.LocationStatus" />

        <variable
            name="model"
            type="com.wenubey.compass.view.CompassViewModel" />
    </data>

</layout>
